# reports_reportlab_v2

./: .gitignore  README.md  pyproject.toml
src/: basic_document.py  build_pdf.py  build_story.py  config.py  fontspec.py  main.py  make_styles.py  platypus_pdf.py  register_fonts.py  scale_image.py
tests/: test_fontspec.py  test_make_styles.py  test_register_fonts.py  test_scale_image.py
