[project]
name = "reports-reportlab-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.17.1",
    "myst-parser>=4.0.1",
    "pydantic>=2.11.7",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
    "reportlab>=4.4.3",
    "ruff>=0.12.12",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "types-reportlab>=4.4.1.20250822",
]
[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
pretty = true
show_error_codes = true
plugins = []
follow_imports = "normal"
ignore_missing_imports = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = """
    --strict-markers
    --disable-warnings
    --maxfail=3
    --cov=src
    --cov-report=term-missing:skip-covered
    --cov-report=xml
    --cov-report=html
"""
testpaths = [
    "tests",
]

markers = [
    "slow: for slow tests",
    "integration: for integration tests",
]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
    "raise NotImplementedError",
]

